--- a/Modelo_preditivos_Churn.ipynb
+++ b/Modelo_preditivos_Churn.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOKqb7mtlPXdUeDwnMtv0/c",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AlexMatheusAlves/modelos_churn/blob/main/Modelo_preditivos_Churn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -30,7 +42,7 @@
       "metadata": {
         "id": "Oh7NtebIeDN0"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +85,7 @@
       "metadata": {
         "id": "8rqWm-5EIcTT"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -554,7 +566,7 @@
         "id": "7VtN7nXyfbHx",
         "outputId": "7be572c6-e710-42fb-ae82-f09ce747e567"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1009,7 +1021,7 @@
         "id": "lB8_d4kJfh1U",
         "outputId": "f185be93-73b9-4381-c428-ac56c2cd5111"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1506,7 +1518,7 @@
       "metadata": {
         "id": "bUbjKzFefvQV"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1532,7 +1544,7 @@
       "metadata": {
         "id": "H9UGAhRrf6Fd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1558,7 +1570,7 @@
         "id": "NXdW44uBBi6H",
         "outputId": "b658486b-1288-460f-934c-191a68efc728"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1631,7 +1643,7 @@
       "metadata": {
         "id": "HZ7PNbNGETg4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1651,7 +1663,7 @@
       "metadata": {
         "id": "_1hET5_QiJov"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1660,7 +1672,7 @@
       "metadata": {
         "id": "taI6YeHC2V5I"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1671,7 +1683,7 @@
       "metadata": {
         "id": "8PNN2IwQqD3L"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
