--- a/Modelo_preditivos_Churn.ipynb
+++ b/Modelo_preditivos_Churn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPV9LPTrIUwbVFNVNMRrTq3",
+      "authorship_tag": "ABX9TyNdx0JhVLVHlJ6u5QTRfzXE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Modelo 1: Regressão Logística**"
+        "# **Modelo 1: Regressão Logística**\n",
+        "\n",
+        "É um modelo estatístico clássico utilizado para prever a probabilidade de um evento binário — neste caso, a evasão do cliente (churn). A regressão logística estima a probabilidade de saída com base em uma combinação linear das variáveis de entrada, transformada por uma função logística (sigmoide).\n",
+        "\n",
+        "Parâmetros principais utilizados:\n",
+        "\n",
+        "solver='liblinear': ideal para conjuntos menores e com menos variáveis;\n",
+        "\n",
+        "random_state=42: garante reprodutibilidade dos resultados.\n",
+        "\n",
+        "Vantagens:\n",
+        "* Interpretação fácil dos coeficientes;\n",
+        "* Rápido de treinar e com boa base estatística.\n",
+        "\n",
+        "Limitações:\n",
+        "* Baixa capacidade de capturar relações não lineares complexas;\n",
+        "* Sensível à multicolinearidade.\n",
+        "\n",
+        "Aplicação neste trabalho:\n",
+        "Usado como modelo de referência, servindo de comparação inicial para os demais modeloss."
       ],
       "metadata": {
         "id": "IKepusLnfRUf"
@@ -549,7 +568,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Modelo 2: Random Forest**"
+        "# **Modelo 2: Random Forest**\n",
+        "\n",
+        "É um algoritmo de ensemble learning baseado em múltiplas árvores de decisão. Cada árvore é construída sobre subconjuntos aleatórios dos dados e das variáveis, e o resultado final é a média (para regressão) ou o voto majoritário (para classificação).\n",
+        "\n",
+        "Parâmetros principais utilizados:\n",
+        "\n",
+        "* n_estimators=100: número de árvores da floresta;\n",
+        "* max_depth=None: sem limite de profundidade das árvores;\n",
+        "* random_state=42: controle de aleatoriedade;\n",
+        "* class_weight='balanced': ajusta automaticamente o peso das classes para lidar com desbalanceamento.\n",
+        "\n",
+        "Vantagens:\n",
+        "\n",
+        "Capaz de capturar relações não lineares;\n",
+        "\n",
+        "Boa robustez contra overfitting;\n",
+        "\n",
+        "Explicações baseadas em importância das variáveis.\n",
+        "\n",
+        "Limitações:\n",
+        "\n",
+        "Pode ser mais lento para grandes volumes de dados;\n",
+        "\n",
+        "Menor interpretabilidade em relação a modelos lineares.\n",
+        "\n",
+        "Aplicação neste trabalho:\n",
+        "Mostrou excelente equilíbrio entre acurácia e recall, tornando-se um forte candidato para produção em ambientes corporativos."
       ],
       "metadata": {
         "id": "-hlquK3DfaN5"
@@ -1004,7 +1049,31 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Modelo 3: XGBoost**"
+        "# **Modelo 3: XGBoost**\n",
+        "\n",
+        "Algoritmo de boosting, onde modelos fracos (pequenas árvores) são treinados sequencialmente, e cada novo modelo tenta corrigir os erros do anterior. O XGBoost é otimizado para desempenho e regularização, sendo uma das ferramentas mais poderosas em competições de dados.\n",
+        "\n",
+        "Parâmetros principais utilizados:\n",
+        "\n",
+        "* n_estimators=100: número de árvores;\n",
+        "* learning_rate=0.1: taxa de aprendizado (quanto cada árvore contribui);\n",
+        "* max_depth=3: profundidade máxima de cada árvore;\n",
+        "* use_label_encoder=False: compatibilidade com versões mais recentes;\n",
+        "* eval_metric='logloss': métrica de avaliação;\n",
+        "* random_state=42: reprodutibilidade.\n",
+        "\n",
+        "Vantagens:\n",
+        "\n",
+        "* Altamente preciso em cenários com muitos dados;\n",
+        "* Resistente a overfitting com regularização embutida;\n",
+        "\n",
+        "Limitações:\n",
+        "\n",
+        "* Mais complexo de ajustar;\n",
+        "* Requer maior capacidade computacional.\n",
+        "\n",
+        "Aplicação neste trabalho:\n",
+        "Apresentou o melhor recall entre os modelos, sendo ideal para cenários onde a identificação de clientes em risco é mais importante do que a simples precisão.*"
       ],
       "metadata": {
         "id": "TUQN-opGff2Q"
@@ -1670,13 +1739,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Salvando novo arquivo para uso posterior no PowerBI**"
+      ],
       "metadata": {
-        "id": "taI6YeHC2V5I"
-      },
-      "execution_count": 11,
-      "outputs": []
+        "id": "cV5T_0Hbxick"
+      }
     },
     {
       "cell_type": "code",
