--- a/Modelo_preditivos_Churn.ipynb
+++ b/Modelo_preditivos_Churn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdx0JhVLVHlJ6u5QTRfzXE",
+      "authorship_tag": "ABX9TyMK/53TddIzE+lS+l9H+c9Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1676,7 +1676,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Classifica risco**\n",
+        "**Classifica risco (USO POWERBI)**\n",
         "\n",
         "0.00 a 0.33\tBaixo Risco\n",
         "0.34 a 0.66\tMédio Risco\n",
@@ -1721,7 +1721,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**coluna nova sobre status descrito**"
+        "**coluna nova sobre status descrito (USO POWERBI)**"
       ],
       "metadata": {
         "id": "C-MO3RNhB2zQ"
